--- a/deliverables/queens/watcher-dashboard.yaml
+++ b/deliverables/queens/watcher-dashboard.yaml
@@ -26,3 +26,4 @@ releases:
         hash: 191d2dbd3ea1591146106385271ed9c86f7e7c14
 repository-settings:
   openstack/watcher-dashboard: {}
+release-notes: https://docs.openstack.org/releasenotes/watcher-dashboard/queens.html
