--- a/deliverables/queens/cloudkitty.yaml
+++ b/deliverables/queens/cloudkitty.yaml
@@ -13,10 +13,10 @@ releases:
       - repo: openstack/cloudkitty
         hash: 15d0a7dd0543f00fa3886d287b980e65b346d949
 cycle-highlights:
-  - Addition/Evolution of collectors (Monasca and Ceph Object Storage)
-  - Split metrology configuration from CK config file
-  - Manage metrics units in yaml configuration
-  - Deprecate the ceilometer collector
+  - 'Addition/Evolution of collectors (Monasca and Ceph Object Storage)'
+  - 'Split metrology configuration from CK config file'
+  - 'Manage metrics units in yaml configuration'
+  - 'Deprecate the ceilometer collector'
 repository-settings:
   openstack/cloudkitty: {}
-release-notes: https://docs.openstack.org/releasenotes/cloudkitty/unreleased.html
+release-notes: https://docs.openstack.org/releasenotes/cloudkitty/queens.html
