--- a/deliverables/queens/manila.yaml
+++ b/deliverables/queens/manila.yaml
@@ -47,3 +47,4 @@ repository-settings:
 branches:
   - location: 6.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/manila/queens.html
