--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -56,3 +56,4 @@ repository-settings:
 branches:
   - location: 8.5.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/tripleo-common/queens.html
