--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -26,3 +26,4 @@ repository-settings:
 branches:
   - location: 8.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/queens.html
