--- a/deliverables/queens/tripleo-ui.yaml
+++ b/deliverables/queens/tripleo-ui.yaml
@@ -26,3 +26,4 @@ repository-settings:
 branches:
   - location: 8.3.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/tripleo-ui/queens.html
