--- a/deliverables/queens/tempest.yaml
+++ b/deliverables/queens/tempest.yaml
@@ -4,6 +4,7 @@ launchpad: tempest
 release-model: cycle-with-intermediary
 team: 'Quality Assurance'
 type: other
+release-notes: https://docs.openstack.org/releasenotes/tempest/v18.0.0.html
 releases:
   - version: 17.1.0
     projects:
