--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -1802,6 +1802,84 @@ releases:
         hash: e8e013ba196a518c1c512cd3c9fb79ef6572c05d
       - repo: openstack/openstack-ansible-os_designate
         hash: 032fc80fa81c81fc107a9877a699d8f0aae2d12c
+  - version: 15.1.17
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 1ebe8fb3b6d385857a7cdef159f852ee4977287a
+      - repo: openstack/ansible-hardening
+        hash: f07bb96deb67c396e060342f4b2ee67b1d2652f1
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: 27e9cbd251e79a6564ab411cf72cceab12bae9d5
+      - repo: openstack/openstack-ansible-pip_install
+        hash: 686fb6bb495b2624f6d8f9b02d7e3b982e2f0561
+      - repo: openstack/openstack-ansible-galera_client
+        hash: 35cd41424d53f24e2ebca34846bfa2ca1ca6b06b
+      - repo: openstack/openstack-ansible-galera_server
+        hash: 686462880c3ed95e0521a46d8ce8b9bbf0b9b130
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: c9fccdc9d7cedc87d609df4f26f7311194821946
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 8daee7d4d8d923e5a8f10f0b64996518d3e3f410
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: 2921b528a4aff0ff7132bfe5dae45f4d407c0d3e
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: 91924b4ce0d2390d5f169f2b0d3a04f99fc68a37
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 5b1ad04a7bf6ca25a6a12518460d4228541601a0
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: 2f94999c56f72816539b5e701d85a1df4adb44a3
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: ca72978661284b57db0220c69c3ea428b8c293e7
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: def92df798c81805ad825ec28befc1742714a41d
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: e4e27fe178161542a68a6c694b3d5051306038d0
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: 4249b318d6932a0fee37026eb8cd3d11e3f8faa3
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 9697496b2be7ef0fbe1cc9bde1c91bb862a6034f
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: a29fe8f050d562602ef4014d9f4abd7345e053b7
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 35897139b655ec1b3a63e9188f3d4a3e0f3c9cf5
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: d8a0e538cb5867d4bf5afddf0f75a5813fa9c27b
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 3b3930161e465da9bd7c03441063007026e46c80
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: a7da483d003975a1e4f3213bc2683a1f304f7f0d
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: d1766aa82e36f80a0ecd60144315f86a406467d8
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: fd806ccddec31e36234ce979906448501db47083
+      - repo: openstack/openstack-ansible-os_trove
+        hash: 869e166b9cbc4020c5c6dd15888530f6f7ed9341
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: 5df6f0c38aef76e9271ac5b6440e632d6a6c2a9a
+      - repo: openstack/openstack-ansible-os_nova
+        hash: 0d5fb3149f4e99c44b467f2b6054ec3e0aa86c5d
+      - repo: openstack/openstack-ansible-os_rally
+        hash: 419c39120b46b708bc3815d15e8c81f8defa12fb
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: 556203c2f2af92cff0e5e7cd8e1ab8e81dbaa8ad
+      - repo: openstack/openstack-ansible-os_swift
+        hash: e957bcd510851803b4cb56620e8c7d26b0c7db4f
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: 37e5ad05e3ff95ca9314c5889e509fb109f8e47a
+      - repo: openstack/openstack-ansible-plugins
+        hash: a90e7606354df543ed6ccaed6aaa10bf70680651
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: 3c0b8df477042f6ebbd3a94bc78d595220dd0c6d
+      - repo: openstack/openstack-ansible-repo_build
+        hash: f5f9e1c390c0d1bc4b1ec2b8a1487aaa3a1095ab
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 0f81de16bf01b67e682a10eed9d1ed463a593461
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: dfab025150965561797d4e11e1f626f7bc597d37
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: e8e013ba196a518c1c512cd3c9fb79ef6572c05d
+      - repo: openstack/openstack-ansible-os_designate
+        hash: 5bdf6c950e2d83f07340cce824792a16e1412e29
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
