queens: release nova 17.0.1
Patch release for some high severity fixes for
volume multiattach and using KSA adapters for
neutron config.

$ git log --oneline --no-merges 17.0.0..
eb21d7d Allow 'network' in RequestContext service_catalog
370c104 Check for multiattach before removing connections
b006a5b Pass user context to virt driver when detaching volume
02aac48 Handle spawning error on unshelving
9ace6ed Imported Translations from Zanata
5039511 compute: Cleans up allocations after failed resize
733b615 Update noVNC deployment docs to mention non-US keymap fix in 1.0.0
a119e05 [placement] Add functional tests for traits API
852de1e [placement] Add sending global request ID in put (3)
d6a072b libvirt: disconnect volume from host during detach
c65dfee Check quota before creating volume snapshots
02acd2d Add the ability to get absolute limits from Cinder
6b11eb7 Add resource_class to fields in ironic node cache
7ab98b5 unquiesce instance on volume snapshot failure

Change-Id: I76832b429b3582a680c16660a7922d0538c6ecb9

--- a/deliverables/queens/nova.yaml
+++ b/deliverables/queens/nova.yaml
@@ -37,6 +37,10 @@ releases:
       - repo: openstack/nova
         hash: a4a53bfa31e22bf1c377dca539ee1c7c7c05847c
     version: 17.0.0
+  - version: 17.0.1
+    projects:
+      - repo: openstack/nova
+        hash: 9d8de62a07b3db7f0913a587156424074cf761c1
 cycle-highlights:
   - |
     The performance of listing instances across a multi-cell cells v2
