--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -6,3 +6,4 @@ sphinxcontrib.datatemplates>=0.1.0  # BSD License
 icalendar>=3.10  # BSD
 whereto>=0.3.0  # Apache-2.0
 mwclient==0.8.1
+yamlordereddictloader
