--- a/deliverables/_independent/tripleo-upgrade.yaml
+++ b/deliverables/_independent/tripleo-upgrade.yaml
@@ -4,11 +4,17 @@ release-type: python-pypi
 branches:
   - name: stable/pike
     location: 1.0.0
+  - name: stable/queens
+    location: 2.0.0
 releases:
   - projects:
       - hash: 0f37163303a00936b56522e2cc3310e38b87a343
         repo: openstack/tripleo-upgrade
     version: 1.0.0
+  - projects:
+      - hash: 40cc25d273619b9e5dd1412ca0a286dfbf9745cf
+        repo: openstack/tripleo-upgrade
+    version: 2.0.0
 team: tripleo
 type: other
 repository-settings:
