--- a/deliverables/queens/python-ironic-inspector-client.yaml
+++ b/deliverables/queens/python-ironic-inspector-client.yaml
@@ -13,6 +13,10 @@ releases:
       - hash: c82b59f583d62610f9b84b6db3cba6682da0bd33
         repo: openstack/python-ironic-inspector-client
     version: 3.1.0
+  - projects:
+      - hash: c65ff948d659dd328e0404d5e240b667a217d413
+        repo: openstack/python-ironic-inspector-client
+    version: 3.1.1
 branches:
   - name: stable/queens
     location: 3.1.0
