--- a/deliverables/queens/puppet-ceilometer.yaml
+++ b/deliverables/queens/puppet-ceilometer.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: 15b01a18c6c7d5919c559259ddefa51e99b8f65c
         repo: openstack/puppet-ceilometer
     version: 12.4.0
+  - projects:
+      - hash: 68d19f8d8fecde20fa40b90729a556f74a6ca310
+        repo: openstack/puppet-ceilometer
+    version: 12.4.1
 repository-settings:
   openstack/puppet-ceilometer: {}
 branches:
