store test temporary files under the .tox environment
Change-Id: I5dbb352285d3e3fcb7fff8ddd18939f3d525f0c6
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ setenv =
    VIRTUAL_ENV={envdir}
    PYTHONUNBUFFERED=1
    LOGDIR={envdir}/log
+   TMPDIR={envdir}/tmp
 basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands =
