--- a/deliverables/queens/ovsdbapp.yaml
+++ b/deliverables/queens/ovsdbapp.yaml
@@ -28,6 +28,10 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: c3288aec527ef21eb57d755540e34e6ac5382a7c
+  - version: 0.10.0
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: f971e5d1a4f86a42346c259e9612f064fc8321a0
 branches:
   - name: stable/queens
     location: 0.9.0
