--- a/deliverables/queens/monasca-agent.yaml
+++ b/deliverables/queens/monasca-agent.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: e76cb28897c6868e738704265aa0eac09cd511b2
         repo: openstack/monasca-agent
     version: 2.6.0
+  - projects:
+      - hash: bd1bc077c54fb7f160c41ea1bbc80cec92fc6964
+        repo: openstack/monasca-agent
+    version: 2.6.1
 branches:
   - location: 2.6.0
     name: stable/queens
