--- a/deliverables/ocata/neutron.yaml
+++ b/deliverables/ocata/neutron.yaml
@@ -49,5 +49,9 @@ releases:
       - hash: c7dde58a85fa70fdbe01644db2338666497315f6
         repo: openstack/neutron
     version: 10.0.4
+  - projects:
+      - hash: f5e7420da5af69293276dc31fe28ff843a74a0b0
+        repo: openstack/neutron
+    version: 10.0.5
 repository-settings:
   openstack/neutron: {}
