--- a/deliverables/queens/tripleo-puppet-elements.yaml
+++ b/deliverables/queens/tripleo-puppet-elements.yaml
@@ -21,6 +21,11 @@ releases:
       - hash: c38d7ff551673d74b3e15415939555e8258936b5
         repo: openstack/tripleo-puppet-elements
     version: 8.0.0.0rc1
+  - diff-start: 7.0.0.0rc1
+    projects:
+      - hash: dabb361b2669c4420c1f6a1f77b0ce76a08f93a5
+        repo: openstack/tripleo-puppet-elements
+    version: 8.0.0
 repository-settings:
   openstack/tripleo-puppet-elements: {}
 branches:
