--- a/deliverables/rocky/python-zunclient.yaml
+++ b/deliverables/rocky/python-zunclient.yaml
@@ -4,5 +4,10 @@ launchpad: python-zunclient
 release-model: cycle-with-intermediary
 team: zun
 type: client-library
+releases:
+  - version: 1.2.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: e625e07d4ba14d6ccc48693e4c512759a1d3d568
 repository-settings:
   openstack/python-zunclient: {}
