Initial Oslo releases for Rocky
Rocky releases for any Oslo projects with meaningful changes since
the cycle opened.

Change-Id: Iff899a9bc68f30a4e8107d09350c402bc8539776

--- a/deliverables/rocky/mox3.yaml
+++ b/deliverables/rocky/mox3.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/mox3: {}
+releases:
+  - projects:
+      - hash: c979e7b77ab7858ff4e49ac5a1ff5c6f32ae291c
+        repo: openstack/mox3
+    version: 0.25.0
