--- a/deliverables/rocky/oslo.concurrency.yaml
+++ b/deliverables/rocky/oslo.concurrency.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/oslo.concurrency: {}
+releases:
+  - projects:
+      - hash: 5b42d276350666410a7d010a5152467ad509d3f9
+        repo: openstack/oslo.concurrency
+    version: 3.26.0
