--- a/deliverables/rocky/oslo.i18n.yaml
+++ b/deliverables/rocky/oslo.i18n.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/oslo.i18n: {}
+releases:
+  - projects:
+      - hash: 172e20b10981069c36b0f42377e5b4fbe22a9864
+        repo: openstack/oslo.i18n
+    version: 3.20.0
