--- a/deliverables/rocky/osprofiler.yaml
+++ b/deliverables/rocky/osprofiler.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/osprofiler: {}
+releases:
+  - projects:
+      - hash: 113a2dddddf6a67d0a2b69d94eef325e39520ac8
+        repo: openstack/osprofiler
+    version: 2.0.0
