Neutron Pike release 11.0.3
Change-Id: Ic343beb4b50e9de0c5b7b8182285210e34c6e78d

--- a/deliverables/pike/neutron.yaml
+++ b/deliverables/pike/neutron.yaml
@@ -42,6 +42,10 @@ releases:
       - hash: 0c3d3c48a73f97cb5924a5fbfce9726a7097ae2e
         repo: openstack/neutron
     version: 11.0.2
+  - projects:
+      - hash: 7cb197fb9b0a058e2368dbe2e598e54ba5633a32
+        repo: openstack/neutron
+    version: 11.0.3
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
