--- a/deliverables/rocky/oslo.db.yaml
+++ b/deliverables/rocky/oslo.db.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: f40f210017054bf4e30b7393094987078ee8f027
         repo: openstack/oslo.db
     version: 4.34.0
+  - projects:
+      - hash: acd1ceb69906b8357ec7c60257651d4731aad08e
+        repo: openstack/oslo.db
+    version: 4.35.0
