--- a/deliverables/rocky/python-zunclient.yaml
+++ b/deliverables/rocky/python-zunclient.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: e625e07d4ba14d6ccc48693e4c512759a1d3d568
+  - version: 1.2.1
+    projects:
+      - repo: openstack/python-zunclient
+        hash: 1ebfddc19d9d73091474cc825436c995ad0a2564
 repository-settings:
   openstack/python-zunclient: {}
