--- a/deliverables/pike/oslo.utils.yaml
+++ b/deliverables/pike/oslo.utils.yaml
@@ -39,6 +39,10 @@ releases:
       - hash: 8b3965b9bbe1e31a4939f2f69c5239d6d5c7f72c
         repo: openstack/oslo.utils
     version: 3.28.1
+  - projects:
+      - hash: 464a73d87f34eb2055c5ebfd1c3dcb418b4e75dc
+        repo: openstack/oslo.utils
+    version: 3.28.2
 team: oslo
 type: library
 repository-settings:
