--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -124,5 +124,9 @@ releases:
       - hash: 45bf02a7a374acb9ad8d87efecd5235751b54aeb
         repo: openstack/openstackdocstheme
     version: 1.19.0
+  - projects:
+      - hash: ad20979b5d0fb14e7dfe688d2c0c5019211a6903
+        repo: openstack/openstackdocstheme
+    version: 1.20.0
 repository-settings:
   openstack/openstackdocstheme: {}
