--- a/deliverables/pike/django_openstack_auth.yaml
+++ b/deliverables/pike/django_openstack_auth.yaml
@@ -21,6 +21,10 @@ releases:
     projects:
       - repo: openstack/django_openstack_auth
         hash: 2ca726c68e92b6aaec0e7b0d6a425063972b870b
+  - version: 3.6.0
+    projects:
+      - repo: openstack/django_openstack_auth
+        hash: 4973ee1f00d008e49c41d19fb4257c1e241f5826
 branches:
   - name: stable/pike
     location: 3.5.0
