--- a/deliverables/queens/puppet-tempest.yaml
+++ b/deliverables/queens/puppet-tempest.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: f8335b96ff78a9f6e8f0a5509e1640bd837fab6c
         repo: openstack/puppet-tempest
     version: 12.3.0
+  - projects:
+      - hash: c0d16d4999464771495e629ef897b64a663ba3c9
+        repo: openstack/puppet-tempest
+    version: 12.4.0
 repository-settings:
   openstack/puppet-tempest: {}
 branches:
