--- a/deliverables/ocata/python-openstackclient.yaml
+++ b/deliverables/ocata/python-openstackclient.yaml
@@ -41,5 +41,9 @@ releases:
     projects:
       - repo: openstack/python-openstackclient
         hash: 1e3dc48c64304eb378660ceb531aab3d42ac0710
+  - version: 3.8.2
+    projects:
+      - hash: f2120f15d54ba8b23748663c81650e3fd7a6efd1
+        repo: openstack/python-openstackclient
 repository-settings:
   openstack/python-openstackclient: {}
