--- a/deliverables/rocky/python-zunclient.yaml
+++ b/deliverables/rocky/python-zunclient.yaml
@@ -13,5 +13,9 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: 1ebfddc19d9d73091474cc825436c995ad0a2564
+  - version: 1.3.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: f100f94f64a56fa25c99fc8f5689647dc49cd7f9
 repository-settings:
   openstack/python-zunclient: {}
