--- a/deliverables/rocky/os-brick.yaml
+++ b/deliverables/rocky/os-brick.yaml
@@ -6,3 +6,8 @@ team: cinder
 type: library
 repository-settings:
   openstack/os-brick: {}
+releases:
+  - projects:
+      - hash: 296887a59ef7913a857d3142cc801b347f2e6584
+        repo: openstack/os-brick
+    version: 2.4.0
