--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 7dd2076a98acaca2ef70bb0a8d231a368b30c644
         repo: openstack/os-brick
     version: 2.3.0
+  - projects:
+      - hash: 773fad170f0841f52131e1a547c18c8c36591f65
+        repo: openstack/os-brick
+    version: 2.3.1
 branches:
   - name: stable/queens
     location: 2.3.0
