--- a/deliverables/pike/monasca-agent.yaml
+++ b/deliverables/pike/monasca-agent.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: ea6d057b93a7f682c455b8a155ddec5d838c4085
         repo: openstack/monasca-agent
     version: 2.2.2
+  - projects:
+      - hash: 11cf0146db9524faf99d489c21eff69b1c378f8d
+        repo: openstack/monasca-agent
+    version: 2.2.3
 branches:
   - location: 2.2.0
     name: stable/pike
